tests/errors/use-after-forget.ari
fn main() -> i64 {
  let token: own i64 = 1;
  forget token;
  drop token;
  return 0;
}
